methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:9: error: reassignment to val
  if (estFaceMur=true){
                ^